src/pre_push/body/snapshots/gherrit__pre_push__body__recipe__tests__bounded_amend_rebase_history.snap
---
source: src/pre_push/body/recipe.rs
expression: normalized
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Explain the history.

---

- 👉 #2147483647


**Latest Update:** v4 — [Compare vs v3](/octo/widgets/compare/gherrit/Ghistory/v3..gherrit/Ghistory/v4)

<details>
<summary><strong>📚 Full Patch History</strong></summary>

*Links show the diff between the row version and the column version.*

|Version| v3 | v2 | v1 |Base|
|:---|:---|:---|:---|:---|
|v4|[vs v3](/octo/widgets/compare/gherrit/Ghistory/v3..gherrit/Ghistory/v4)|[vs v2](/octo/widgets/compare/gherrit/Ghistory/v2..gherrit/Ghistory/v4)|[vs v1](/octo/widgets/compare/gherrit/Ghistory/v1..gherrit/Ghistory/v4)|[vs Base](/octo/widgets/compare/<literal-base-v4>...gherrit/Ghistory/v4)|
|v3||[vs v2](/octo/widgets/compare/gherrit/Ghistory/v2..gherrit/Ghistory/v3)|[vs v1](/octo/widgets/compare/gherrit/Ghistory/v1..gherrit/Ghistory/v3)|[vs Base](/octo/widgets/compare/<literal-base-v3>...gherrit/Ghistory/v3)|
|v2|||[vs v1](/octo/widgets/compare/gherrit/Ghistory/v1..gherrit/Ghistory/v2)|[vs Base](/octo/widgets/compare/<literal-base-v2>...gherrit/Ghistory/v2)|
|v1||||[vs Base](/octo/widgets/compare/<literal-base-v1>...gherrit/Ghistory/v1)|

</details>
<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Ghistory && git checkout -b pr-Ghistory FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Ghistory && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Ghistory && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Ghistory
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
